--- a/subsys/bluetooth/mesh/Kconfig
+++ b/subsys/bluetooth/mesh/Kconfig
@@ -421,7 +421,14 @@ config BT_MESH_ADV_EXT_GATT_SEPARATE
 	depends on BT_MESH_GATT_SERVER
 	help
 	  Use a separate extended advertising set for GATT Server Advertising,
-	  otherwise will be used a shared advertising set.
+	  otherwise a shared advertising set will be used.
+
+config BT_MESH_ADV_EXT_FRIEND_SEPARATE
+	bool "Use a separate extended advertising set for Friend advertising"
+	depends on BT_MESH_FRIEND
+	help
+	  Use a separate extended advertising set for Friend advertising,
+	  otherwise a shared advertising set will be used.
 
 endif # BT_MESH_ADV_EXT
 
@@ -879,10 +886,10 @@ config BT_MESH_FRIEND_ADV_LATENCY
 	int "Latency for enabling advertising"
 	default 0
 	help
-	  Latency in milliseconds that it takes to start friend advertising
-	  after requesting it. Used to tune the receive delay window to make
-	  Friend poll events more efficient by compensating for the time the
-	  non-ideal latency otherwise would add to the delay.
+	  Latency in milliseconds between request for and start of Friend
+	  advertising. Used to tune the receive delay window, making Friend
+	  poll events more efficient by compensating for the time the
+	  non-ideal latency otherwise would have added to the delay.
 
 endif # BT_MESH_FRIEND
 
